--- a/analysis_py.ipynb
+++ b/analysis_py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,8 @@
     "import time\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.cluster import AgglomerativeClustering\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import pkuseg"
    ]
   },
   {
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,16 +40,13 @@
     "    # if word has digits, letters or punctuations\n",
     "    result = re.search(\n",
     "        '[' +\n",
-    "        '\\u2000-\\u206F' +\n",
-    "        '\\u0000-\\u002F' +\n",
-    "        '\\u003A-\\u0040' +\n",
-    "        '\\u005B-\\u0060' +\n",
-    "        '\\u007B-\\u007F' +\n",
-    "        '\\u0080-\\u00FF' +\n",
-    "        '\\uFF00-\\uFF0F' +\n",
-    "        '\\u3000-\\u303F' +\n",
-    "        '\\u0030-\\u0039' +\n",
-    "        '\\u0040-\\u007F' +\n",
+    "        '\\u2000-\\u206F' +  # 一般的符号\n",
+    "        '\\u0000-\\u002F' +  # 符号\n",
+    "        '\\u003A-\\u0040' +  # 符号\n",
+    "        '\\u005B-\\u0060' +  # 符号\n",
+    "        '\\u007B-\\u007F' +  # 符号\n",
+    "        '\\uFF00-\\uFFEF' +  # 全角字符\n",
+    "        '\\u3000-\\u303F' +  # 中文标点\n",
     "        ']',\n",
     "        word\n",
     "    )\n",
@@ -61,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,107 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 328,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>term</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>问题</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>分支</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>定界</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>求解</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>思路</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14906</th>\n",
-       "      <td>发向</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14915</th>\n",
-       "      <td>获知</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14955</th>\n",
-       "      <td>自制</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14973</th>\n",
-       "      <td>没有用</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14978</th>\n",
-       "      <td>后会</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5173 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      term\n",
-       "5       问题\n",
-       "7       分支\n",
-       "8       定界\n",
-       "9       求解\n",
-       "10      思路\n",
-       "...    ...\n",
-       "14906   发向\n",
-       "14915   获知\n",
-       "14955   自制\n",
-       "14973  没有用\n",
-       "14978   后会\n",
-       "\n",
-       "[5173 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "term_indexes.iloc[selected_indexes, :]"
+    "term_indexes.iloc[selected_indexes, :].to_csv('termdocmatrix/selected_terms.csv', index=False)"
    ]
   },
   {
@@ -206,6 +108,34 @@
    "source": [
     "doc_matrix_full = np.loadtxt('termdocmatrix/doc_matrix.txt', delimiter=',')\n",
     "doc_matrix = doc_matrix_full[:, selected_indexes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1341., 2110.,  857., 1189.,    8.,  518., 1221., 2084., 2967.,\n",
+       "       1248., 1989.,    5.,  400.,  885.,  581., 1195., 1741.,  842.,\n",
+       "        184.,  102.,   64., 1881., 3457.,  708.,  194.,    9.,  380.,\n",
+       "        102.,  639.,  347., 1019.,  584.,  401.,  215.,  902.,  436.,\n",
+       "        124.,    0.,  381.,  606., 1331.,   22.,  812.,  957.,   16.,\n",
+       "        741., 2192.,   68.,  558.,  795., 1516., 1810.,  813.,  878.,\n",
+       "        947., 4083.,   46.,  219.,  834.,   51.,  400., 3255., 1490.,\n",
+       "         77.,  671.,  904.,  966.,   51.,  919., 1318., 1377.,  556.,\n",
+       "         92.])"
+      ]
+     },
+     "execution_count": 313,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(doc_matrix, axis=1)"
    ]
   },
   {
@@ -348,15 +278,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_words = ['分支', '定界', '求解']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 170,
    "metadata": {},
    "outputs": [
@@ -380,249 +301,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u,d,vh = np.linalg.svd(doc_matrix, full_matrices=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seg = pkuseg.pkuseg()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_terms = seg.cut('网页缓存')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>term</th>\n",
-       "      <th>col_index_in_doc_matrix</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1685</th>\n",
-       "      <td>缓存</td>\n",
-       "      <td>830</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     term  col_index_in_doc_matrix\n",
-       "1685   缓存                      830"
+       "['网页', '缓存']"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "selected_terms.iloc[selected_terms.iloc[:, 0].to_numpy() == '缓存', :]"
+    "query_terms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 286,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>term</th>\n",
-       "      <th>col_index_in_doc_matrix</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1729</th>\n",
-       "      <td>书桌</td>\n",
-       "      <td>862</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     term  col_index_in_doc_matrix\n",
-       "1729   书桌                      862"
-      ]
-     },
-     "execution_count": 262,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "selected_terms.iloc[selected_terms.iloc[:, 0].to_numpy() == '书桌', :]"
+    "indexes_to_set = list()\n",
+    "for term in query_terms:\n",
+    "    correspond_indexes = selected_terms.iloc[selected_terms.iloc[:, 0].to_numpy() == term, :]\n",
+    "    if correspond_indexes.shape[0]:\n",
+    "        indexes_to_set.append(correspond_indexes.iloc[0, 1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>term</th>\n",
-       "      <th>col_index_in_doc_matrix</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1744</th>\n",
-       "      <td>节省</td>\n",
-       "      <td>875</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     term  col_index_in_doc_matrix\n",
-       "1744   节省                      875"
-      ]
-     },
-     "execution_count": 263,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "selected_terms.iloc[selected_terms.iloc[:, 0].to_numpy() == '节省', :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 265,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>term</th>\n",
-       "      <th>col_index_in_doc_matrix</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1016</th>\n",
-       "      <td>网页</td>\n",
-       "      <td>502</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     term  col_index_in_doc_matrix\n",
-       "1016   网页                      502"
-      ]
-     },
-     "execution_count": 265,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "selected_terms.iloc[selected_terms.iloc[:, 0].to_numpy() == '网页', :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
     "query_row = np.array(range(doc_matrix.shape[1]))\n",
-    "\n",
     "query_row[:] = 0\n",
-    "\n",
-    "query_row[830] = 1\n",
-    "query_row[862] = 1\n",
-    "query_row[875] = 1\n",
-    "query_row[502] = 1\n",
-    "\n",
-    "u1,d1,vh1 = np.linalg.svd(doc_matrix)\n",
-    "\n",
-    "coord = np.matmul(query_row.reshape((1, doc_matrix.shape[1])), vh1.T)[0, 0:73]\n",
-    "\n",
-    "coords = np.matmul(doc_matrix, vh1.T)[:, 0:73]"
+    "for index_to_set in indexes_to_set:\n",
+    "    query_row[index_to_set] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def my_cos(x1, x2):\n",
+    "query_coord = np.matmul(query_row.reshape((1, doc_matrix.shape[1])), vh1.T)[0, 0:doc_matrix.shape[0]]\n",
+    "doc_coords = np.matmul(doc_matrix, vh1.T)[:, 0:doc_matrix.shape[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cos_of_two_vector(x1, x2):\n",
     "    n_x1 = np.linalg.norm(x1)\n",
     "    n_x2 = np.linalg.norm(x2)\n",
     "    inner_prod = np.abs(np.sum(x1 * x2))\n",
@@ -631,85 +396,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-269-935785f574e4>:5: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "<ipython-input-291-dcc94b03bc75>:5: RuntimeWarning: invalid value encountered in double_scalars\n",
       "  return inner_prod / (n_x1 * n_x2)\n"
      ]
     }
    ],
    "source": [
-    "coss = [my_cos(coord, coords[i,:]) for i in range(coords.shape[0])]"
+    "cos_of_query_and_docs = [cos_of_two_vector(coord, doc_coords[i,:]) for i in range(doc_coords.shape[0])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coss = np.array(coss)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([False, False,  True, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False])"
+       "[2.3132362493006597e-16,\n",
+       " 0.007398161806718659,\n",
+       " 0.7885719195177288,\n",
+       " 2.6897202958542385e-16,\n",
+       " 4.899329720416439e-17,\n",
+       " 1.1881759827980173e-17,\n",
+       " 0.012318763189771448,\n",
+       " 0.20332744408799136,\n",
+       " 0.004133441811905724,\n",
+       " 3.2491792429161596e-16,\n",
+       " 3.3506991792932823e-16,\n",
+       " 1.5578600237784392e-16,\n",
+       " 0.020578444687700752,\n",
+       " 0.012948239477395873,\n",
+       " 0.10444513208530037,\n",
+       " 0.009880505571827675,\n",
+       " 4.437921564084582e-16,\n",
+       " 0.1317224140776608,\n",
+       " 3.432004289563128e-17,\n",
+       " 1.6338009787566354e-16,\n",
+       " 6.295490638809145e-17,\n",
+       " 1.5897409305238466e-16,\n",
+       " 1.0426864022604856e-16,\n",
+       " 3.516525769220923e-17,\n",
+       " 0.0545999024913028,\n",
+       " 8.795559671635933e-17,\n",
+       " 5.842078162358262e-17,\n",
+       " 0.06427562977040387,\n",
+       " 0.06751842931971178,\n",
+       " 2.0587006615862056e-16,\n",
+       " 4.781647602759868e-16,\n",
+       " 8.978382161134312e-16,\n",
+       " 0.07026304525981104,\n",
+       " 8.449848021069044e-17,\n",
+       " 0.013623393366589659,\n",
+       " 1.4499742149952298e-16,\n",
+       " 1.6021658682268865e-16,\n",
+       " nan,\n",
+       " 1.562673248673795e-16,\n",
+       " 1.0614289035574102e-16,\n",
+       " 0.04011678116961417,\n",
+       " 2.249493740021366e-16,\n",
+       " 5.279404629040544e-16,\n",
+       " 8.570954530266295e-17,\n",
+       " 4.1441684160364944e-17,\n",
+       " 7.509059705131991e-17,\n",
+       " 2.998043852960554e-16,\n",
+       " 2.9199559635078163e-16,\n",
+       " 1.626942689189923e-17,\n",
+       " 3.3421276918165256e-16,\n",
+       " 9.23976942650215e-17,\n",
+       " 1.774270078838581e-17,\n",
+       " 3.206208395336732e-16,\n",
+       " 2.0373625912400775e-16,\n",
+       " 0.11511396878916644,\n",
+       " 0.0063377188785803925,\n",
+       " 9.108744979590621e-17,\n",
+       " 3.418308956898916e-17,\n",
+       " 0.03511546460180969,\n",
+       " 3.117016415133954e-17,\n",
+       " 0.05395237464036603,\n",
+       " 0.6026830933606316,\n",
+       " 1.179335146297841e-16,\n",
+       " 0.07373684380502463,\n",
+       " 0.08198491062137084,\n",
+       " 3.1576167271068554e-16,\n",
+       " 1.8755746723636133e-16,\n",
+       " 5.448167325442123e-17,\n",
+       " 1.0007322671709619e-20,\n",
+       " 2.1242856481169833e-16,\n",
+       " 0.18300555234731347,\n",
+       " 2.0529897534411615e-16,\n",
+       " 7.678703741657572e-17]"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "coss > 0.7885"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 274,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([False, False,  True, False, False, False, False,  True, False,\n",
-       "       False, False, False, False, False,  True, False, False,  True,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "        True, False, False, False, False, False, False,  True, False,\n",
-       "       False, False, False, False, False, False, False,  True, False,\n",
-       "       False])"
-      ]
-     },
-     "execution_count": 274,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "coss > 0.1"
+    "cos_of_query_and_docs"
    ]
   },
   {
