--- a/cut_pkuseg.ipynb
+++ b/cut_pkuseg.ipynb
@@ -2,38 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['我', '爱', '北京', '天安门']\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pkuseg\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "seg = pkuseg.pkuseg()           # 以默认配置加载模型\n",
-    "text = seg.cut('我爱北京天安门')  # 进行分词\n",
-    "print(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import pkuseg\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "seg = pkuseg.pkuseg()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 73/73 [00:18<00:00,  4.01it/s]\n"
+      "100%|██████████| 73/73 [00:18<00:00,  3.93it/s]\n"
      ]
     }
    ],
@@ -78,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 73/73 [00:00<00:00, 609.49it/s]\n"
+      "100%|██████████| 73/73 [00:00<00:00, 714.13it/s]\n"
      ]
     }
    ],
@@ -115,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 73/73 [00:00<00:00, 2058.82it/s]\n"
+      "100%|██████████| 73/73 [00:00<00:00, 2145.72it/s]\n"
      ]
     }
    ],
@@ -139,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,14 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 73/73 [00:00<00:00, 190.16it/s]\n"
+      "100%|██████████| 73/73 [00:00<00:00, 180.62it/s]\n"
      ]
     }
    ],
@@ -176,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +169,7 @@
        "73"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +189,7 @@
        "14992"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,51 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "article_indexes = pd.DataFrame({\n",
-    "    'article_name': article_names\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "term_indexes = pd.DataFrame({\n",
-    "    'term': all_term_vector\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "article_indexes.to_csv('termdocmatrix/article_indexes.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "term_indexes.to_csv('termdocmatrix/term_indexes.csv', index=False)"
+    "article_indexes = pd.DataFrame({\n",
+    "    'article_name': article_names,\n",
+    "    'row_num_in_doc_matrix': range(len(article_names))\n",
+    "})"
    ]
   },
   {
@@ -269,12 +216,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "term_indexes = pd.DataFrame({\n",
+    "    'term': all_term_vector,\n",
+    "    'col_num_in_doc_matrix': range(len(all_term_vector))\n",
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article_indexes.to_csv('termdocmatrix/article_indexes.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "term_indexes.to_csv('termdocmatrix/term_indexes.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,13 +254,6 @@
     "    fmt = '%u'\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
