--- a/analysis_py.ipynb
+++ b/analysis_py.ipynb
@@ -225,17 +225,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 499,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['crontab']"
+      ]
+     },
+     "execution_count": 499,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 接受用户输入\n",
-    "query_terms = seg.cut('网页缓存')"
+    "query_terms = seg.cut('crontab')\n",
+    "query_terms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 500,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 501,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +272,7 @@
        "True"
       ]
      },
-     "execution_count": 478,
+     "execution_count": 501,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 502,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 503,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 504,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 505,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 506,
    "metadata": {},
    "outputs": [
     {
@@ -360,34 +372,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>add-your-site-cache-control.md</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8.487181e-01</td>\n",
+       "      <th>13</th>\n",
+       "      <td>crontab-tutorial.md</td>\n",
+       "      <td>13</td>\n",
+       "      <td>9.778627e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>rfc7234-read-and-think.md</td>\n",
-       "      <td>61</td>\n",
-       "      <td>7.973298e-01</td>\n",
+       "      <th>40</th>\n",
+       "      <td>linux-tools-recommendation-1.md</td>\n",
+       "      <td>40</td>\n",
+       "      <td>4.837851e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>cdn-deployment.md</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2.531913e-01</td>\n",
+       "      <th>37</th>\n",
+       "      <td>learn-svg.md</td>\n",
+       "      <td>37</td>\n",
+       "      <td>5.679358e-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>telling-static-file-accelerating-and-whole-sit...</td>\n",
-       "      <td>70</td>\n",
-       "      <td>2.054186e-01</td>\n",
+       "      <th>48</th>\n",
+       "      <td>mongo-db-mac-os-tutorial.md</td>\n",
+       "      <td>48</td>\n",
+       "      <td>5.589611e-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>envisioning-an-larger-blogging-system.md</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1.777333e-01</td>\n",
+       "      <th>20</th>\n",
+       "      <td>feature-request-scripts-hub.md</td>\n",
+       "      <td>20</td>\n",
+       "      <td>4.742996e-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -396,34 +408,34 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>merge-two-sorted-array.md</td>\n",
-       "      <td>45</td>\n",
-       "      <td>1.670507e-17</td>\n",
+       "      <th>25</th>\n",
+       "      <td>how-fast.md</td>\n",
+       "      <td>25</td>\n",
+       "      <td>5.507013e-18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>feature-request-scripts-hub.md</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1.031761e-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>construct-arbitary-distribution-from-arbitary-...</td>\n",
-       "      <td>10</td>\n",
-       "      <td>7.157345e-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>complex-plane-and-eulers-formular-and-liuhuis-...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>6.552857e-18</td>\n",
+       "      <th>23</th>\n",
+       "      <td>generate-parentheses-base-on-desicion-procedur...</td>\n",
+       "      <td>23</td>\n",
+       "      <td>4.816387e-18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>authorship-homogeneous-test-based-on-text-segm...</td>\n",
        "      <td>4</td>\n",
-       "      <td>6.240550e-18</td>\n",
+       "      <td>4.343183e-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>association-rules-mining-and-apriori-algorithm.md</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.079663e-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>release-a-huge-disk-space-in-macos.md</td>\n",
+       "      <td>60</td>\n",
+       "      <td>3.176555e-18</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -432,35 +444,35 @@
       ],
       "text/plain": [
        "                                         article_name  row_num_in_doc_matrix  \\\n",
-       "2                      add-your-site-cache-control.md                      2   \n",
-       "61                          rfc7234-read-and-think.md                     61   \n",
-       "7                                   cdn-deployment.md                      7   \n",
-       "70  telling-static-file-accelerating-and-whole-sit...                     70   \n",
-       "17           envisioning-an-larger-blogging-system.md                     17   \n",
-       "..                                                ...                    ...   \n",
-       "45                          merge-two-sorted-array.md                     45   \n",
+       "13                                crontab-tutorial.md                     13   \n",
+       "40                    linux-tools-recommendation-1.md                     40   \n",
+       "37                                       learn-svg.md                     37   \n",
+       "48                        mongo-db-mac-os-tutorial.md                     48   \n",
        "20                     feature-request-scripts-hub.md                     20   \n",
-       "10  construct-arbitary-distribution-from-arbitary-...                     10   \n",
-       "9   complex-plane-and-eulers-formular-and-liuhuis-...                      9   \n",
+       "..                                                ...                    ...   \n",
+       "25                                        how-fast.md                     25   \n",
+       "23  generate-parentheses-base-on-desicion-procedur...                     23   \n",
        "4   authorship-homogeneous-test-based-on-text-segm...                      4   \n",
+       "3   association-rules-mining-and-apriori-algorithm.md                      3   \n",
+       "60              release-a-huge-disk-space-in-macos.md                     60   \n",
        "\n",
        "       match_val  \n",
-       "2   8.487181e-01  \n",
-       "61  7.973298e-01  \n",
-       "7   2.531913e-01  \n",
-       "70  2.054186e-01  \n",
-       "17  1.777333e-01  \n",
+       "13  9.778627e-01  \n",
+       "40  4.837851e-02  \n",
+       "37  5.679358e-16  \n",
+       "48  5.589611e-16  \n",
+       "20  4.742996e-16  \n",
        "..           ...  \n",
-       "45  1.670507e-17  \n",
-       "20  1.031761e-17  \n",
-       "10  7.157345e-18  \n",
-       "9   6.552857e-18  \n",
-       "4   6.240550e-18  \n",
+       "25  5.507013e-18  \n",
+       "23  4.816387e-18  \n",
+       "4   4.343183e-18  \n",
+       "3   4.079663e-18  \n",
+       "60  3.176555e-18  \n",
        "\n",
        "[73 rows x 3 columns]"
       ]
      },
-     "execution_count": 490,
+     "execution_count": 506,
      "metadata": {},
      "output_type": "execute_result"
     }
